# etqw-sdk

./: CMakeLists.txt  Official Community Site.url  README  cmake_msvc2022-x86.cmd  cmake_msvc2022-x86_64.cmd  sdk_readme.txt
Animation Examples/initial_edf/dev_sd/: edf_pistol_stand_takeout003_IDLE.mb  edf_pliers_stand_takeout004_STAND2CROUCH.mb  edf_pliers_stand_use001_CYC.mb  edf_twohandedweapons_jog_back002.mb  edf_twohandedweapons_jog_forward002.mb  edf_twohandedweapons_walk_back002.mb
Animation Examples/strogg/dev_sd/: base.mb  strogg_blaster_stand_idle001.mb  strogg_blaster_walk_forward001.mb  strogg_hand_drone_repair_003_INTO.mb  strogg_hand_drone_repair_003_OUT.mb  strogg_hand_walk_forward_006.mb  strogg_hand_walk_forward_006_BACK.mb
base/atmosphere/: _blank.atm  canyon.atm  domination_hub.atm  lightning.atm  mop.atm  valley.atm
base/bindings/: etqw.binding
base/def/: aas.def  bot.def  e3_temp_remove_me.def  light.def  model.def  mounts.def  moveable.def  path.def  pathfinder.def  proficiency_items.def  radiant.def  ranks.def  requirements.def  sdtriggers.def  target.def  templates.def
base/def/campaigns/: ld_playtest.def  (+1 more)
base/effects/: generic_flames.effect
base/imposters/: generate_asian.imp  generate_autumn.imp  generate_palm.imp  generate_snow2.imp  generate_tropical.imp  generate_tropical2.imp
base/mapinfo/: cgw_screens.md  climate_skins.md  default.md  island.md  sewer.md  volcano.md
base/materials/: base_trim.mtr  billboards.mtr  blendlights.mtr  blockout.mtr  botclip.mtr  cc_console.mtr  characters.mtr  cockpits.mtr  collision_bad.mtr  commandmaps.mtr  concrete.mtr  decals.mtr  demo.mtr  effects.mtr  etqwmap.mtr  floors.mtr  frankies.mtr  helpers.mtr  id_base_light.mtr  id_base_trim.mtr  id_base_wall.mtr  id_characters.mtr  id_lights.mtr  id_object.mtr  id_weapons.mtr  infrastructure.mtr  invisible.mtr  jim.mtr  lights.mtr  massive.mtr  megastamp.mtr  metal.mtr  metal_new.mtr  n_quarry.mtr  particles_andrew.mtr  particles_penta.mtr  particles_peppi.mtr  penta.mtr  pipes.mtr  postprocess.mtr  (+21 more)
base/menus/: gdf_quickchat.radialmenu  quickchat.include
base/quickchat/: common.include  gdf.qc  strogg_bot.qc
base/renderlight/: ark.rlt  canyon.rlt  island.rlt  salvage.rlt  sewer.rlt  valley.rlt
base/renderprogs/: guiblur.rprog  skies.rprog
base/script/: default.script  events.script  util.script
base/sounds/: ambience.sndshd  ambient_events.sndshd  amt_gdf.sndshd  apt_gdf.sndshd  assaultrifle.sndshd  avt_strogg.sndshd  badger.sndshd  blaster.sndshd  cinematics.sndshd  deployables.sndshd  desecrator.sndshd  flyerhive.sndshd  forwardspawn.sndshd  gatling.sndshd  gdf_botchat.sndshd  gdf_highcommand_canyon.sndshd  gdf_highcommand_island.sndshd  gdf_highcommand_objectives.sndshd  gdf_highcommand_refinery.sndshd  gdf_highcommand_salvage.sndshd  gdf_highcommand_slipgate.sndshd  goliath.sndshd  gpmg.sndshd  grenades.sndshd  guis.sndshd  hog.sndshd  husky.sndshd  hyperblaster.sndshd  icarus.sndshd  lacerator.sndshd  machinepistol.sndshd  magog.sndshd  music.sndshd  obliterator.sndshd  railgun.sndshd  repairdrone.sndshd  rockets.sndshd  sbc.sndshd  shieldgenerator.sndshd  slipgate.sndshd  (+15 more)
base/stuff/: island.stuff  quarry.stuff  refinery.stuff  salvage.stuff  volcano.stuff
base/surfacetypes/: types.stp
base/templates/: atmosphere.template  effects.template  foliage.template  imposters.template  materials.template  wind.template
base/vehicles/: bumblebee.vscript  goliath.vscript  icarus.vscript  platypus.vscript  titan.vscript  trojan.vscript
docs/: EULA SDK ETQW.rtf  Editing Wiki.url  Official Website.url
sdk_output/base/: pakmeta.conf  sample_addon.conf
source/bse/: BSE.h  BSEInterface.h  BSE_Envelope.h  BSE_Particle.h  BSE_SpawnDomains.h
source/cm/: CollisionModel.h
source/common/: common.h
source/decllib/: DeclType.cpp  declAmbientCubeMap.h  declAtmosphere.h  declDecal.h  declRenderBinding.h  declStuffType.h  declType.h
source/framework/: BuildVersion.cpp  Common_public.h  DeclParseHelper.h  FileSystem.h  KeyInput.h  LogitechLCDSystem.h  NotificationSystem.h  Session.h  declManager.h
source/game/: AF.cpp  AF.h  AFEntity.cpp  AORManager.cpp  Actor.cpp  AnimatedEntity.cpp  AntiLag.cpp  AntiLag.h  Atmosphere.cpp  Atmosphere.h  AtmosphereRenderable.cpp  AtmosphereRenderable.h  Camera.cpp  CommandMapInfo.cpp  CrosshairInfo.cpp  CrosshairInfo.h  Effect.cpp  Entity.cpp  Entity.h  EntityPtr.h  Game.h  GameEdit.cpp  Game_Precompiled.cpp  Game_Precompiled.h  Game_Repeater.cpp  Game_local.cpp  Game_local.h  Game_network.cpp  Game_ui.cpp  IK.cpp  IK.h  InputMode.cpp  InputMode.h  Item.cpp  Light.cpp  LimboProperties.cpp  LimboProperties.h  Misc.cpp  Misc.h  Moveable.cpp  (+24 more)
source/idlib/: AutoPtr.h  AutoTimer.h  BitMsg.cpp  Callable.h  Callable_WIP.h  Color.cpp  Color.h  Dict.cpp  Factory.h  FunctionSignals.h  Handle.h  Heap.cpp  Heap.h  ImagePacker.cpp  ImagePacker.h  LangDict.cpp  LangDict.h  Lib.cpp  Lib.h  LibImpl.h  LibOS.h  MapFile.cpp  PoolAllocator.cpp  PoolAllocator.h  Properties.cpp  Properties.h  PropertiesImpl.h  PropertyTraits.h  SmartPtr.h  Sort.h  TextUtilities.cpp  Timer.h  precompiled.h
source/renderer/: Cinematic.h  Material.h  Model.h
source/sdklauncher/: CMakeLists.txt
source/sdklauncher/res/: res.qrc
source/sdklauncher/res/config/: game_default.json
source/sdklauncher/res/markdown/: about.md
source/sdklauncher/res/win32/: sdk_launcher.rc
source/sdklauncher/src/: Config.h.in  GameConfig.cpp  GameConfig.h  LaunchButton.h  Main.cpp  NewAddonDialog.cpp  NewAddonDialog.h  NewModDialog.cpp  NewModDialog.h  Window.cpp  Window.h  precompiled.cpp  precompiled.h
source/sdnet/: SDNetFriendsManager.h  SDNetMessage.h  SDNetSession.h  SDNetTeamManager.h
source/sound/: SoundWorld.h
source/sys/: sys_local.h  sys_public.h  sys_render.h
win32/: _Common.props  _Debug.props  _Game.props  _GameDecl.props  _Release.props  _SDK.props  _WithInlines.props  _idLib.props  etqw_sdk.sln  game_sdk.vcxproj  game_sdk.vcxproj.filters  idlib_sdk.vcxproj  idlib_sdk.vcxproj.filters  libGameDecl_sdk.vcxproj  libGameDecl_sdk.vcxproj.filters
(+1714 files in other folders)
